Changed scrollbar styling, other minor UI fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -6,26 +6,38 @@
 	font: "Trebuchet MS", "sans-serif";
 }
 
-*::-webkit-scrollbar-track {
-	background: rgb(63 63 70) !important;
+*::-webkit-scrollbar {
+	height: 2rem;
+	width: 0.5rem;
 }
 
+.main-scroll::-webkit-scrollbar-track {
+	border-radius: 5px;
+	background-color: #0f172a;
+}
+
+.drop-down-scroll::-webkit-scrollbar-track {
+	border-radius: 5px;
+	background-color: #334155;
+}
+  
+*::-webkit-scrollbar-track:hover {
+	background-color: #1e293b;
+}
+  
+*::-webkit-scrollbar-track:active {
+	background-color: #1e293b;
+}
+  
 *::-webkit-scrollbar-thumb {
-	background: red !important;
+	border-radius: 5px;
+	background-color: #f1f5f9;
 }
-
-/*::-webkit-scrollbar-thumb:hover {
-	background: rgb(113 113 122) !important;
-}*/
-
-*::-ms-thumb {
-	background: red !important;
+  
+*::-webkit-scrollbar-thumb:hover {
+	background-color: #e2e8f0;
 }
-
-*::-ms-track {
-	background: rgb(63 63 70) !important;
+  
+*::-webkit-scrollbar-thumb:active {
+	background-color: #cbd5e1;
 }
-
-/*::-ms-thumb:hover {
-	background: rgb(113 113 122) !important;
-}*/
